# Little-Giant-Circuits

./: .gitignore  CLAUDE.md  CLAUDE_BOOTSTRAP.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
app/: streamlit_app.py
app/learn/: learn_mode.py
app/react_learn/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/react_learn/src/: App.tsx  types.ts
app/react_learn/src/components/: PlaybackControls.tsx  ProgressTimeline.tsx  StageExplanation.tsx  StagePlayer.tsx  StageViz.tsx
app/react_learn/src/hooks/: useLearnData.ts  useSpatialStore.ts
app/views/: __init__.py  attention_view.py  comparison.py  layer_overview.py  logit_evolution.py  mlp_view.py  token_overview.py
docs/: ENVIRONMENT.md  PROJECT_PLAN.md  WORKFLOW.md
docs/architecture/: README.md  react_learn_mode.md  spatial_visualization.md
docs/phase_context/: current_phase.md  implementation_status.md  next_actions.md  open_questions.md  review_notes.md
docs/phases/: README.md  TEMPLATE.md  phase_0.md  phase_1.md  phase_2.md  phase_3.md
docs/proposals/: README.md  spatial_viewer_plan.md
docs/theory/: README.md
scripts/: export_learn_stages.py  generate_demo_traces.py  trace_prompt.py
src/datasets/: bracket_match.py  factual_lookup.py  induction.py  kv_retrieval.py  modular_arith.py  sorting.py
src/models/: transformer.py
src/tracing/: __init__.py  cache.py  export.py  tracer.py
src/training/: loop.py  train.py
src/utils/: checkpoint.py  config.py
src/viz/: __init__.py  export_stages.py  loading.py  playback.py  plotting.py  stages.py
(+19 files in other folders)
